tests/extensions/concurrency/valid/semaDown.wacc
begin
    sema s = sema(3);
    sema_down s
end