tests/extensions/concurrency/semanticErr/semaDownWrongType.wacc
begin
    lock l;
    sema_down l
end